--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #header{
     width: 100%;
     padding: 20px 0px;
-    background-color: #39549f;
+    background-color: #4d90fe;
 }
 #header ul{
     margin-left: 50px;
@@ -74,7 +74,7 @@
     border: 2px solid grey;
 }
 #idea #ideaButton button:hover{
-    border-color: #39549f;
+    border-color: #4d90fe;
 }
 #registerForm h1{
     text-align: center;
@@ -82,6 +82,97 @@
 #registerForm h4{
     text-align: center;
 }
+#registerForm .facts h3{
+    text-align:center;
+}
+#registerForm .facts{
+    float:right;
+}
+#login h1{
+    text-align: center;
+}
+#login .loginStyle {
+    padding: 40px;
+    width: 100%;
+    background-color: #F7F7F7;
+    margin: 30px auto 10px;
+    border-radius: 2px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+#login .loginStyle h1 {
+    font-weight: 100;
+    text-align: center;
+    font-size: 2.3em;
+}
+
+#login .loginStyle input[type=submit] {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+#login .loginStyle input[type=text], input[type=password] {
+    height: 44px;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 10px;
+    -webkit-appearance: none;
+    background: #fff;
+    border: 1px solid #d9d9d9;
+    border-top: 1px solid #c0c0c0;
+    padding: 0 8px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+#login .loginStyle input[type=text]:hover, input[type=password]:hover {
+    border: 1px solid #b9b9b9;
+    border-top: 1px solid #a0a0a0;
+    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+#login .login {
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Arial', sans-serif;
+    font-weight: 700;
+    height: 36px;
+    padding: 0 8px;
+}
+
+.login-submit {
+    /* border: 1px solid #3079ed; */
+    border: 0px;
+    color: #fff;
+    text-shadow: 0 1px rgba(0,0,0,0.1);
+    background-color: #4d90fe;
+}
+
+.login-submit:hover {
+    border: 0px;
+    text-shadow: 0 1px rgba(0,0,0,0.3);
+    background-color: #357ae8;
+}
+
+.loginStyle a {
+    text-decoration: none;
+    color: #666;
+    font-weight: 400;
+    text-align: center;
+    display: inline-block;
+    opacity: 0.6;
+    transition: opacity ease 0.5s;
+}
+
+.loginStyle a:hover {
+    opacity: 1;
+}
+
 @media screen and (max-width: 990px){
     #header .menuDesktop{
         display: none;
