--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,47 @@
 .loginStyle a:hover {
     opacity: 1;
 }
+#rides{
+    padding: 30px 0;
+}
+#rides .offerRide span{
+    background-image: url(../images/offerRide.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    width: 100%;
+    height: 250px;
+    display: block;
+}
+#rides .offerRide{
+    border: 2px solid blue;
+}
+#rides .offerRideExpand{
+    display:none;
+}
+#rides .searchRideExpand{
+    display: none;
+}
+#rides .offerRide h3{
+    cursor: pointer;
+    text-align:center;
+}
+#rides .searchRide{
+    border: 2px solid blue;
+}
+#rides .searchRide span{
+    background-image: url(../images/NEED-A-RIDE.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position:center center;
+    width: 100%;
+    height: 250px;
+    display: block;
+}
 
+#rides .searchRide h3{
+    cursor: pointer;
+    text-align:center;
+}
 @media screen and (max-width: 990px){
     #header .menuDesktop{
         display: none;
