--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #header{
     width: 100%;
     padding: 20px 0px;
-    background-color: #4d90fe;
+    background-color: white;
 }
 #header ul{
     margin-left: 30px;
@@ -12,10 +12,13 @@
 }
 #header ul li a{
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
-    color:white;
+    color:#969696;
+}
+#header ul li a:hover{
+    color: #ff3b3f;
 }
 #header .menuMobile{
     display: none;
@@ -32,7 +35,7 @@
 }
 #idea{
     padding: 30px 0px;
-    background-color: lightgray;
+    background-color: #efefef;
 }
 #idea .card{
     width: 100%;
@@ -41,10 +44,16 @@
 #idea h2{
     text-align:center;
     margin-bottom: 40px;
+    color: #969696;
+    font-weight:600;
 }
-#idea h4{
+#idea .underHeadline{
     text-align:center;
+    font-weight: 600;
+    font-size:22px;
     margin-bottom: 20px;
+    color: #969696;
+    background-color: #caebf2;
 }
 #idea .card .icon{
     display: inline-block;
@@ -66,31 +75,57 @@
 #idea .card .icon-nature{
     background-position: -220px 0px;
 }
+#idea .card p{
+    color: #969696;
+    background-color: #caebf2;
+    font-weight: 600;
+    font-size:16px;
+}
 #idea #ideaButton{
     text-align: center;
     margin-top:30px;
 }
 #idea #ideaButton button{
     height: 40px;
+    color: #969696;
+    font-weight: 600;
     background-color: transparent;
     border-radius: 2px;
-    border: 2px solid #4d90fe;
+    border: 3px solid #caebf2;
     min-width: 140px;
 }
 #idea #ideaButton button:hover{
-    background-color: #4d90fe;
+    background-color: #caebf2;
+    border-color:#2e6da4;
+}
+#registerForm{
+    background-image: url(../images/big_thumb_00297a2528269ffcd01955cb6acb0a12.png);
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+    overflow:auto;
 }
 #registerForm h1{
+    color:white;
     text-align: center;
 }
+.bodyAllPosts #header ul{
+    float:right;
+}
 #registerForm h4{
+    color:white;
     text-align: center;
 }
 #registerForm .facts h3{
+    color:white;
     text-align:center;
 }
 #registerForm .facts{
     float:right;
+}
+#registerForm .facts ul li{
+    color:white;
 }
 #login h1{
     text-align: center;
@@ -188,7 +223,19 @@
     display: block;
 }
 #rides .offerRide{
-    border: 1px solid blue;
+    border: 3px solid #caebf2;
+}
+#rides #publishRide{
+    margin-top:10px;
+    border: 2px solid #2e6da4;
+    background-color:#caebf2;
+    color:Black;
+}
+#rides #searchRide{
+    margin-top: 10px;
+    border: 2px solid #2e6da4;
+    background-color: #caebf2;
+    color:Black;
 }
 #rides .offerRideExpand{
     display:none;
@@ -217,6 +264,9 @@
     width: 24px;
     height: 24px;
     margin-left: 10px;
+    -moz-transition: all 1s linear;
+    -webkit-transition: all 1s linear;
+    transition: all 1s linear;
 }
 #rides .offerRide .down::before{
     -moz-transition: all 1s linear;
@@ -227,7 +277,7 @@
     transform:rotate(180deg);
 }
 #rides .searchRide{
-    border: 1px solid blue;
+    border: 3px solid #caebf2;
 }
 .centerButton{
     text-align:center;
@@ -248,6 +298,9 @@
 #rides .searchRide h3::before{
     content: ' ';
     background-image:url(../images/down-arrow.png);
+    -moz-transition: all 1s linear;
+    -webkit-transition: all 1s linear;
+    transition: all 1s linear;
     display: block;
     position:absolute;
     width: 24px;
@@ -263,7 +316,7 @@
     transform:rotate(180deg);
 }
 #listing{
-    background-color:lightgray;
+    background-color:#efefef;
     padding: 30px 0px;
 }
 #listing h3{
@@ -280,14 +333,15 @@
 #listing #seeAll{
     height: 40px;
     background-color: transparent;
-    border: 2px solid #4d90fe;
+    border: 3px solid #caebf2;
     border-radius: 2px;
     min-width: 140px;
     margin-top: 40px;
     color: black;
 }
 #listing #seeAll:hover{
-    background-color: #4d90fe;
+    background-color: #caebf2;
+    border-color:#2e6da4;
 }
 #aboutUs{
     padding: 50px 0px;
@@ -321,7 +375,7 @@
     background-image: url(../images/second.jpg);
 }
 #footer{
-    background-color:lightgray;
+    background-color:#efefef;
     padding: 10px 0px;
 }
 #footer h5{
@@ -339,7 +393,7 @@
 #footer .icon-twitter{
     background-image: url(../images/twitter.png);
 }
-#bodyAllPosts{
+.bodyAllPosts{
     overflow:hidden;
 }
 #posts{
