--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 #header{
     width: 100%;
-    padding: 20px 0px;
-    position:absolute;
+    padding: 10px 0px;
 }
 #header ul{
     margin-left: 30px;
@@ -103,14 +102,13 @@
     background-position: center center;
     background-size: cover;
     width: 100%;
-    height: 90vh;
     overflow:auto;
 }
 #registerForm h1{
     color:white;
     text-align: center;
 }
-.bodyAllPosts #header ul{
+#header ul{
     text-align:center;
 }
 #registerForm h4{
@@ -155,7 +153,6 @@
     padding: 40px;
     width: 100%;
     background-color: #F7F7F7;
-    margin: 30px auto 10px;
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     overflow: hidden;
