--- a/css/styles.css
+++ b/css/styles.css
@@ -2,32 +2,86 @@
     width: 100%;
     padding: 10px 0px;
 }
-#header ul{
+#header .menuDesktop ul{
     margin-left: 30px;
 }
-#header ul li{
+#header .menuDesktop ul li{
     display: inline;
     margin-right: 40px;
 }
-#header ul li a{
+#header .menuDesktop ul li a{
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
     color:#969696;
 }
-#header ul li a:hover{
+#header .menuDesktop ul li a:hover{
     color: #ff3b3f;
 }
-#header .menuMobile{
+#header a.menuMobile{
     display: none;
 }
-#header .menuMobile a{
-    background-image: url(../images/menu-button-of-three-horizontal-lines.png);
+#header .mobileHidden{
+    right: -250px;
+    top: 0;
+    bottom: 0;
+    width: 250px;
+    position: fixed;
+    overflow-x: hidden;
+    overflow-y: auto;
+    z-index: 1001;
+    border-left: 1px solid #e0e0e0;
+    background-color: #f9f9f9;
+    transition: all .25s ease-out;
+}
+#header .mobileHidden.active{
+    transition: all 1s ease;
+    right:0px;
+}
+#header .mobileHidden ul li{
+    line-height:50px;
+    border-bottom: 1px solid #e0e0e0;
+}
+#header .mobileHidden ul li a{
     display: block;
+    outline: none;
+    padding-left: 25px;
+    font-size: 16px;
+    font-weight:600;
+    color: #7d7d7d;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+#header .mobileHidden .icon-rightArrow{
+    background-image: url(../images/right-arrow.png);
+    height:32px;
     width: 32px;
-    height: 32px;
+    display:block;
+    cursor:pointer;
+    margin-left:auto;
+    margin-right:auto;
+}
+#header .menuMobile {
+    outline: none;
+    width: 65px;
+    height: 40px;
+    display: block;
+    position: relative;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+    cursor: pointer;
     float:right;
+}
+#header .menuMobile span::after{
+    box-shadow: 15px 1px 0 1px #b2b2b2, 15px 8px 0 1px #b2b2b2, 15px 15px 0 1px #b2b2b2;
+    content: "";
+    position: absolute;
+    display: block;
+    height: 0;
+    top: 50%;
+    margin-top: -8px;
+    left: 10px;
+    width: 20px;
 }
 #notLogged .menuItems li{
     float:right;
@@ -108,7 +162,7 @@
     color:white;
     text-align: center;
 }
-#header ul{
+#header .menuDesktop ul{
     text-align:center;
 }
 #registerForm h4{
@@ -419,7 +473,7 @@
     background-position: center center;
     background-size: cover;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     overflow:auto;
 }
 #posts a{
@@ -446,7 +500,7 @@
     #header .menuDesktop{
         display: none;
     }
-    #header .menuMobile{
+    #header a.menuMobile{
         display: block;
     }
 }
